<resources>
    <string name="app_name">STUDEOFIN - EDUCAÇÃO FINANCEIRA</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="EsqueceuSenha">Esqueceu a senha?</string>
    <string name="CriarConta">Criar uma conta</string>
    <string name="Sair">Sair</string>
    <string name="Nome">Nome</string>
    <string name="Sobrenome">Sobrenome</string>
    <string name="Salvar">Salvar</string>
    <string name="CancelarConta">Cancelar Conta</string>
    <string name="usuario">Usuario</string>
    <string name="RecuperarSenha">Recuperar Senha</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_conta">conta</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recuperar_senha">recuperar_senha</string>
    <string name="title_activity_logout">Logout</string>
    <string name="logout">Tem certeza que deseja fazer logout?</string>
    <string name="Ok">Ok</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Planejamento">Planejamento Financeiro</string>
    <string name="GerirReceita">Gerir Receita e despesas</string>
    <string name="ControleSaldo">Controle de Saldo</string>
    <string name="AlertaGastos">Alerta de Gastos</string>
    <string name="ConteudoEducacional">Conteúdo Educacional</string>
    <string name="Indicadores">Indicadores Financeiros</string>
    <string name="Dicas">Dicas de Investimentos</string>
    <string name="Metas">Metas</string>
    <string name="Forum">Forúm de Dúvidas</string>
    <string name="Perfil">Perfil</string>
    <string name="title_activity_cancelar">Cancelar_Activity</string>
    <string name="PerderDados">Voce perderá todos os seus dados!\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tDeseja realmente cancelar sua conta?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="Tipos">
        <item>Receita</item>
        <item>Despesa</item>
    </string-array>
</resources>