<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Planejamento"
            android:icon="@drawable/calendario_2"
            android:title="@string/Planejamento" />
        <item
            android:id="@+id/nav_Gerir"
            android:icon="@drawable/calendario_2"
            android:title="@string/GerirReceita" />
        <item
            android:id="@+id/nav_Controle"
            android:icon="@drawable/calendario_2"
            android:title="@string/ControleSaldo" />
        <item
            android:id="@+id/nav_Alerta"
            android:icon="@drawable/calendario_2"
            android:title="@string/AlertaGastos" />
        <item
            android:id="@+id/nav_Educacional"
            android:icon="@drawable/calendario_2"
            android:title="@string/ConteudoEducacional" />
        <item
            android:id="@+id/nav_Indicadores"
            android:icon="@drawable/calendario_2"
            android:title="@string/Indicadores" />
        <item
            android:id="@+id/nav_Dicas"
            android:icon="@drawable/calendario_2"
            android:title="@string/Dicas" />
        <item
            android:id="@+id/nav_Metas"
            android:icon="@drawable/metas2"
            android:title="@string/Metas" />
        <item
            android:id="@+id/nav_Forum"
            android:icon="@drawable/calendario_2"
            android:title="@string/Forum" />
        <item
            android:id="@+id/nav_Perfil"
            android:icon="@drawable/calendario_2"
            android:onClick="Perfil"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/nav_Sair"
            android:icon="@drawable/calendario_2"
            android:onClick="Logout"
            android:title="@string/Sair" />
    </group>
</menu>