<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logout">

    <Button
        android:id="@+id/login7"
        android:layout_width="446dp"
        android:layout_height="87dp"
        android:layout_gravity="start"
        android:layout_marginTop="4dp"
        android:enabled="false"
        android:text="@string/Sair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login8"
        android:layout_width="371dp"
        android:layout_height="141dp"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="404dp"
        android:enabled="false"
        android:text="@string/logout"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ok"
        android:layout_width="321dp"
        android:layout_height="56dp"
        android:layout_gravity="start"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="316dp"
        android:enabled="true"
        android:text="@string/Ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="325dp"
        android:layout_height="53dp"
        android:layout_gravity="start"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="232dp"
        android:enabled="true"
        android:text="@string/Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.385"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>